Fixed colors and mobile sidebar

--- a/index.html
+++ b/index.html
@@ -57,31 +57,31 @@
 
       <div class="d-inline-block d-lg-none ml-md-0 ml-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle "><span class="icon-menu h3"></span></a></div>
 
-      <div class="main-menu">
-        <ul class="js-clone-nav">
-          <li><a href="#section-home" class="nav-link">Home</a></li>
-          <li><a href="#section-photos" class="nav-link">Photos</a></li>
-          <li><a href="#section-about" class="nav-link">About</a></li>
-          <!-- <li><a href="#section-testimonial" class="nav-link">Testimonial</a></li> -->
-          <!-- <li><a href="#section-blog" class="nav-link">Blog</a></li> -->
-          <li><a href="#section-contact" class="nav-link">Contact</a></li>
-        </ul>
-        <ul class="social js-clone-nav">
-          <li><a href="#"><span class="icon-instagram"></span></a></li>
-          <li><a href="#"><span class="icon-facebook"></span></a></li>
-          <li><a href="#"><span class="icon-twitter"></span></a></li>
-          <li><a href="#"><span class="icon-linkedin"></span></a></li>
-        </ul>
-      </div>
+        <div class="main-menu">
+          <ul class="js-clone-nav">
+            <li><a href="#section-home" class="nav-link js-menu-close">Home</a></li>
+            <li><a href="#section-photos" class="nav-link js-menu-close">Photos</a></li>
+            <li><a href="#section-about" class="nav-link js-menu-close">About</a></li>
+            <!-- <li><a href="#section-testimonial" class="nav-link">Testimonial</a></li> -->
+            <!-- <li><a href="#section-blog" class="nav-link">Blog</a></li> -->
+            <li><a href="#section-contact" class="nav-link js-menu-close">Contact</a></li>
+          </ul>
+          <ul class="social js-clone-nav">
+            <li><a href="#"><span class="icon-instagram"></span></a></li>
+            <li><a href="#"><span class="icon-facebook"></span></a></li>
+            <li><a href="#"><span class="icon-twitter"></span></a></li>
+            <li><a href="#"><span class="icon-linkedin"></span></a></li>
+          </ul>
+        </div>
     </header> 
     <main class="main-content">
 
       <section class="site-section-hero bg-image mb-5" style="background-image: url('images/hero-min.jpg');"  data-stellar-background-ratio="0.5" id="section-home">
         <div class="row justify-content-center align-items-center">
           <div class="col-md-7 text-center">
-            <h1 class=" heading text-uppercase text-white" data-aos="fade-up">Title</h1>
-            <p class="lead text-white mb-4" data-aos="fade-up" data-aos-delay="100">aoeuaoeu<a href="https://untree.co/">Untree.co</a>. Under licensed <a href="https://untree.co/license/" taget="_blank">Creative Common Attribution 3.0</a></p>
-            <p data-aos="fade-up" data-aos-delay="100"><a href="#section-contact" class="btn btn-primary btn-md smoothscroll">Available for hire</a></p>
+            <h1 class=" heading text-uppercase text-white" data-aos="fade-up">Javier Thiele-Ruiz</h1>
+              <a href="#section-photos" class="d-block photo-item" data-caption="aoeuaoeuaoeu">
+                <img src="images/GettyImages-672094523.jpg" alt="Image" class="img-fluid mb-0">
           </div>
         </div>
       </section>
@@ -100,77 +100,50 @@
             <div class="row align-items-stretch">
 
               <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
-                <a href="images/img_4.jpg" class="d-block photo-item" data-fancybox="gallery">
-                  <img src="images/img_4.jpg" alt="Image" class="img-fluid mb-0">
-                  <div class="photo-text-more">
-                    <span class="icon icon-eye"></span>
-                  </div>
+                <a href="images/GettyImages-672094523.jpg" class="d-block photo-item" data-fancybox="gallery" data-caption="aoeuaoeuaoeu">
+                  <img src="images/GettyImages-672094523.jpg" alt="Image" class="img-fluid mb-0">
                 </a>
               </div>
               <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
                 <a href="images/img_5.jpg" class="d-block photo-item" data-fancybox="gallery">
                   <img src="images/img_5.jpg" alt="Image" class="img-fluid mb-0">
-                  <div class="photo-text-more">
-                    <span class="icon icon-eye"></span>
-                  </div>
                 </a>
               </div>
               <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                 <a href="images/img_1.jpg" class="d-block photo-item" data-fancybox="gallery">
                   <img src="images/img_1.jpg" alt="Image" class="img-fluid mb-0">
-                  <div class="photo-text-more">
-                    <span class="icon icon-eye"></span>
-                  </div>
                 </a>
               </div>
 
               <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
                 <a href="images/img_2.jpg" class="d-block photo-item" data-fancybox="gallery">
                   <img src="images/img_2.jpg" alt="Image" class="img-fluid mb-0">
-                  <div class="photo-text-more">
-                    <span class="icon icon-eye"></span>
-                  </div>
                 </a>
               </div>
               <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
                 <a href="images/img_3.jpg" class="d-block photo-item" data-fancybox="gallery">
                   <img src="images/img_3.jpg" alt="Image" class="img-fluid mb-0">
-                  <div class="photo-text-more">
-                    <span class="icon icon-eye"></span>
-                  </div>
                 </a>
               </div>
               <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                 <a href="images/img_6.jpg" class="d-block photo-item" data-fancybox="gallery">
                   <img src="images/img_6.jpg" alt="Image" class="img-fluid mb-0">
-                  <div class="photo-text-more">
-                    <span class="icon icon-eye"></span>
-                  </div>
                 </a>
               </div>
 
               <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
                 <a href="images/img_7.jpg" class="d-block photo-item" data-fancybox="gallery">
                   <img src="images/img_7.jpg" alt="Image" class="img-fluid mb-0">
-                  <div class="photo-text-more">
-                    <span class="icon icon-eye"></span>
-                  </div>
                 </a>
               </div>
               <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
                 <a href="images/img_8.jpg" class="d-block photo-item" data-fancybox="gallery">
                   <img src="images/img_8.jpg" alt="Image" class="img-fluid mb-0">
-                  <div class="photo-text-more">
-                    <span class="icon icon-eye"></span>
-                  </div>
                 </a>
               </div>
               <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                 <a href="images/img_9.jpg" class="d-block photo-item" data-fancybox="gallery">
                   <img src="images/img_9.jpg" alt="Image" class="img-fluid mb-0">
-                  <div class="photo-text-more">
-                    <span class="icon icon-eye"></span>
-                  </div>
                 </a>
               </div>
 
@@ -178,100 +151,64 @@
               <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
                 <a href="images/img_10.jpg" class="d-block photo-item" data-fancybox="gallery">
                   <img src="images/img_10.jpg" alt="Image" class="img-fluid mb-0">
-                  <div class="photo-text-more">
-                    <span class="icon icon-eye"></span>
-                  </div>
                 </a>
               </div>
               <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
                 <a href="images/img_1.jpg" class="d-block photo-item" data-fancybox="gallery">
                   <img src="images/img_1.jpg" alt="Image" class="img-fluid mb-0">
-                  <div class="photo-text-more">
-                    <span class="icon icon-eye"></span>
-                  </div>
                 </a>
               </div>
               <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                 <a href="images/img_2.jpg" class="d-block photo-item" data-fancybox="gallery">
                   <img src="images/img_2.jpg" alt="Image" class="img-fluid mb-0">
-                  <div class="photo-text-more">
-                    <span class="icon icon-eye"></span>
-                  </div>
                 </a>
               </div>
 
               <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
                 <a href="images/img_3.jpg" class="d-block photo-item" data-fancybox="gallery">
                   <img src="images/img_3.jpg" alt="Image" class="img-fluid mb-0">
-                  <div class="photo-text-more">
-                    <span class="icon icon-eye"></span>
-                  </div>
                 </a>
               </div>
               <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
                 <a href="images/img_4.jpg" class="d-block photo-item" data-fancybox="gallery">
                   <img src="images/img_4.jpg" alt="Image" class="img-fluid mb-0">
-                  <div class="photo-text-more">
-                    <span class="icon icon-eye"></span>
-                  </div>
                 </a>
               </div>
               <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                 <a href="images/img_5.jpg" class="d-block photo-item" data-fancybox="gallery">
                   <img src="images/img_5.jpg" alt="Image" class="img-fluid mb-0">
-                  <div class="photo-text-more">
-                    <span class="icon icon-eye"></span>
-                  </div>
                 </a>
               </div>
 
               <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
                 <a href="images/img_6.jpg" class="d-block photo-item" data-fancybox="gallery">
                   <img src="images/img_6.jpg" alt="Image" class="img-fluid mb-0">
-                  <div class="photo-text-more">
-                    <span class="icon icon-eye"></span>
-                  </div>
                 </a>
               </div>
               <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
                 <a href="images/img_7.jpg" class="d-block photo-item" data-fancybox="gallery">
                   <img src="images/img_7.jpg" alt="Image" class="img-fluid mb-0">
-                  <div class="photo-text-more">
-                    <span class="icon icon-eye"></span>
-                  </div>
                 </a>
               </div>
               <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                 <a href="images/img_8.jpg" class="d-block photo-item" data-fancybox="gallery">
                   <img src="images/img_8.jpg" alt="Image" class="img-fluid mb-0">
-                  <div class="photo-text-more">
-                    <span class="icon icon-eye"></span>
-                  </div>
                 </a>
               </div>
 
               <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
                 <a href="images/img_9.jpg" class="d-block photo-item" data-fancybox="gallery">
                   <img src="images/img_9.jpg" alt="Image" class="img-fluid mb-0">
-                  <div class="photo-text-more">
-                    <span class="icon icon-eye"></span>
-                  </div>
                 </a>
               </div>
               <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
                 <a href="images/img_4.jpg" class="d-block photo-item" data-fancybox="gallery">
                   <img src="images/img_4.jpg" alt="Image" class="img-fluid mb-0">
-                  <div class="photo-text-more">
-                    <span class="icon icon-eye"></span>
-                  </div>
                 </a>
               </div>
               <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                 <a href="images/img_5.jpg" class="d-block photo-item" data-fancybox="gallery">
                   <img src="images/img_5.jpg" alt="Image" class="img-fluid mb-0">
-                  <div class="photo-text-more">
-                    <span class="icon icon-eye"></span>
-                  </div>
                 </a>
               </div>
 
@@ -478,11 +415,11 @@
 
                   <div class="row form-group">
                     <div class="col-md-6 mb-3 mb-md-0">
-                      <label class="" for="fname">First Name</label>
+                      <label class="form-title" for="fname">First Name</label>
                       <input type="text" id="fname" class="form-control">
                     </div>
                     <div class="col-md-6">
-                      <label class="" for="lname">Last Name</label>
+                      <label class="form-title" for="lname">Last Name</label>
                       <input type="text" id="lname" class="form-control">
                     </div>
                   </div>
@@ -490,7 +427,7 @@
                   <div class="row form-group">
 
                     <div class="col-md-12">
-                      <label class="" for="email">Email</label> 
+                      <label class="form-title" for="email">Email</label> 
                       <input type="email" id="email" class="form-control">
                     </div>
                   </div>
@@ -498,14 +435,14 @@
                   <div class="row form-group">
 
                     <div class="col-md-12">
-                      <label class="" for="subject">Subject</label> 
+                      <label class="form-title" for="subject">Subject</label> 
                       <input type="subject" id="subject" class="form-control">
                     </div>
                   </div>
 
                   <div class="row form-group mb-5">
                     <div class="col-md-12">
-                      <label class="" for="message">Message</label> 
+                      <label class="form-title" for="message">Message</label> 
                       <textarea name="message" id="message" cols="30" rows="7" class="form-control"></textarea>
                     </div>
                   </div>
