--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <div class="main-menu">
           <ul class="js-clone-nav">
-            <!-- <li><a href="#section-home" class="nav-link js-menu-close">Home</a></li> -->
+            <li><a href="#section-home" class="nav-link js-menu-close">Home</a></li>
             <li><a href="#section-photos" class="nav-link js-menu-close">Photos</a></li>
             <li><a href="#section-about" class="nav-link js-menu-close">About</a></li>
             <!-- <li><a href="#section-testimonial" class="nav-link">Testimonial</a></li> -->
@@ -76,15 +76,15 @@
     </header> 
     <main class="main-content">
 
-      <!-- <section class="site-section-hero bg-image mb-5" style="background-image: url('images/hero-min.jpg');"  data-stellar-background-ratio="0.5" id="section-home"> -->
-      <!--   <div class="row justify-content-center align-items-center"> -->
-      <!--     <div class="col-md-7 text-center"> -->
-      <!--       <h1 class=" heading text-uppercase text-white" data-aos="fade-up">Javier Thiele-Ruiz</h1> -->
-      <!--         <a href="#section-photos" class="d-block photo-item" data-caption="aoeuaoeuaoeu"> -->
-      <!--           <img src="images/GettyImages-672094523.jpg" alt="Image" class="img-fluid mb-0"> -->
-      <!--     </div> -->
-      <!--   </div> -->
-      <!-- </section> -->
+      <section class="site-section-hero bg-image mb-5" style="background-image: url('images/hero-min.jpg');"  data-stellar-background-ratio="0.5" id="section-home">
+        <div class="row justify-content-center align-items-center">
+          <div class="col-md-7 text-center">
+            <h1 class=" heading text-uppercase text-white" data-aos="fade-up">Javier Thiele-Ruiz</h1>
+              <a href="#section-photos" class="d-block photo-item" data-caption="aoeuaoeuaoeu">
+                <img src="images/GettyImages-672094523.jpg" alt="Image" class="img-fluid mb-0">
+          </div>
+        </div>
+      </section>
 
       <div class="container-fluid site-section">
 
