Added form redirect

--- a/index.html
+++ b/index.html
@@ -409,10 +409,7 @@
               <div class="col-md-8">
                 <h2 class=" mb-5 heading">Contact</h2>
 
-                <form action="#">
-
-
-
+                <form method="post" action="https://forms.un-static.com/forms/20ce849bd5db71a6709117082dbdbe50d0e1e6e3">
                   <div class="row form-group">
                     <div class="col-md-6 mb-3 mb-md-0">
                       <label class="form-title" for="fname">First Name</label>
