Finalized form submissions

--- a/index.html
+++ b/index.html
@@ -1,19 +1,12 @@
-<!-- /*
-* Template Name: Snap
-* Template Author: Untree.co
-* Tempalte URI: https://untree.co/
-* License: https://creativecommons.org/licenses/by/3.0/
-*/ -->
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="author" content="Untree.co">
   <link rel="shortcut icon" href="favicon.png">
 
-  <meta name="description" content="" />
-  <meta name="keywords" content="" />
+  <meta name="description" content="Architectural photographer Javier Thiele-Ruiz portfolio" />
+  <meta name="keywords" content="architecture architectural photographer photography bay area san francisco california" />
   
 
   <link href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600, 700,900|Oswald:400,700" rel="stylesheet">
@@ -409,49 +402,51 @@
               <div class="col-md-8">
                 <h2 class=" mb-5 heading">Contact</h2>
 
-                <form method="post" action="https://forms.un-static.com/forms/20ce849bd5db71a6709117082dbdbe50d0e1e6e3">
-                  <div class="row form-group">
-                    <div class="col-md-6 mb-3 mb-md-0">
-                      <label class="form-title" for="fname">First Name</label>
-                      <input type="text" id="fname" class="form-control">
+                  <form method="post" action="https://forms.un-static.com/forms/20ce849bd5db71a6709117082dbdbe50d0e1e6e3">
+                    <div class="row form-group">
+                      <div class="col-md-6 mb-3 mb-md-0">
+                        <label class="form-title" for="fname">First Name</label>
+                        <input name="firstname" type="text" id="fname" class="form-control">
+                      </div>
+                      <div class="col-md-6">
+                        <label class="form-title" for="lname">Last Name</label>
+                        <input name="lastname" type="text" id="lname" class="form-control">
+                      </div>
                     </div>
-                    <div class="col-md-6">
-                      <label class="form-title" for="lname">Last Name</label>
-                      <input type="text" id="lname" class="form-control">
+
+                    <div class="row form-group">
+
+                      <div class="col-md-12">
+                        <label class="form-title" for="email">Email</label> 
+                        <input name="email" type="email" id="email" class="form-control">
+                      </div>
                     </div>
-                  </div>
 
-                  <div class="row form-group">
+                    <div class="row form-group">
 
-                    <div class="col-md-12">
-                      <label class="form-title" for="email">Email</label> 
-                      <input type="email" id="email" class="form-control">
+                      <div class="col-md-12">
+                        <label class="form-title" for="subject">Subject</label> 
+                        <input name="subject" type="subject" id="subject" class="form-control">
+                      </div>
                     </div>
-                  </div>
 
-                  <div class="row form-group">
-
-                    <div class="col-md-12">
-                      <label class="form-title" for="subject">Subject</label> 
-                      <input type="subject" id="subject" class="form-control">
+                    <div class="row form-group mb-5">
+                      <div class="col-md-12">
+                        <label class="form-title" for="message">Message</label> 
+                        <textarea name="message" id="message" cols="30" rows="7" class="form-control"></textarea>
+                      </div>
                     </div>
-                  </div>
 
-                  <div class="row form-group mb-5">
-                    <div class="col-md-12">
-                      <label class="form-title" for="message">Message</label> 
-                      <textarea name="message" id="message" cols="30" rows="7" class="form-control"></textarea>
+                    <div class="row form-group">
+                      <div class="col-md-12">
+                        <button type="submit" value="Send Message" class="btn btn-primary btn-md">Submit</button>
+                      </div>
                     </div>
-                  </div>
-
-                  <div class="row form-group">
-                    <div class="col-md-12">
-                      <input type="submit" value="Send Message" class="btn btn-primary btn-md">
+                    <div>
+                      <p><small>(Powered by <a rel="nofollow" href="Un-static Forms">Un-static Forms</a>)</small></p>
                     </div>
-                  </div>
 
-
-                </form>
+                  </form>
               </div>
             </div>
           </div>
@@ -459,7 +454,7 @@
 
         <div class="row justify-content-center">
           <div class="col-md-12 text-center py-5">
-            <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co">Untree.co</a> <!-- License information: https://untree.co/license/ -->
+            <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved.
             </p>
           </div>
         </div>
