Updated font, added pictures, set gradient

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="architecture architectural photographer photography bay area san francisco california" />
   
 
-  <link href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600, 700,900|Oswald:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600, 700,900|Oswald:400,700|Space+Grotesk:300,400|Mohave" rel="stylesheet">
 
 
   <link rel="stylesheet" href="fonts/icomoon/style.css">
@@ -69,11 +69,11 @@
     </header> 
     <main class="main-content">
 
-      <section class="site-section-hero bg-image mb-5" style="background-image: url('images/hero-min.jpg');"  data-stellar-background-ratio="0.5" id="section-home">
+      <section class="site-section-hero bg-image mb-5" style=""  id="section-home">
         <div class="row justify-content-center align-items-center">
           <div class="col-md-7 text-center">
-            <h1 class=" heading text-uppercase text-white" data-aos="fade-up">Javier Thiele-Ruiz</h1>
-              <a href="#section-photos" class="d-block photo-item" data-caption="aoeuaoeuaoeu">
+            <!-- <h1 class=" heading text-uppercase text-white" data-aos="fade-up">Javier Thiele-Ruiz</h1> -->
+              <a href="#section-photos" class="d-block " >
                 <img src="images/GettyImages-672094523.jpg" alt="Image" class="img-fluid mb-0">
           </div>
         </div>
@@ -93,117 +93,119 @@
             <div class="row align-items-stretch">
 
               <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
-                <a href="images/GettyImages-672094523.jpg" class="d-block photo-item" data-fancybox="gallery" data-caption="aoeuaoeuaoeu">
-                  <img src="images/GettyImages-672094523.jpg" alt="Image" class="img-fluid mb-0">
+                <a href="images/Family Justice 1.jpg" class="d-block photo-item" data-fancybox="gallery" data-caption="Family Justice Center | ZGF">
+                  <img src="images/Family Justice 1.jpg" alt="Image" class="img-fluid mb-0">
                 </a>
               </div>
-              <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-                <a href="images/img_5.jpg" class="d-block photo-item" data-fancybox="gallery">
-                  <img src="images/img_5.jpg" alt="Image" class="img-fluid mb-0">
-                </a>
-              </div>
-              <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-                <a href="images/img_1.jpg" class="d-block photo-item" data-fancybox="gallery">
-                  <img src="images/img_1.jpg" alt="Image" class="img-fluid mb-0">
-                </a>
-              </div>
-
               <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
-                <a href="images/img_2.jpg" class="d-block photo-item" data-fancybox="gallery">
-                  <img src="images/img_2.jpg" alt="Image" class="img-fluid mb-0">
+                <a href="images/Family Justice 2.jpg" class="d-block photo-item" data-fancybox="gallery" data-caption="Family Justice Center | ZGF">
+                  <img src="images/Family Justice 2.jpg" alt="Image" class="img-fluid mb-0">
                 </a>
               </div>
-              <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-                <a href="images/img_3.jpg" class="d-block photo-item" data-fancybox="gallery">
-                  <img src="images/img_3.jpg" alt="Image" class="img-fluid mb-0">
-                </a>
-              </div>
-              <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-                <a href="images/img_6.jpg" class="d-block photo-item" data-fancybox="gallery">
-                  <img src="images/img_6.jpg" alt="Image" class="img-fluid mb-0">
-                </a>
-              </div>
-
+              
               <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
-                <a href="images/img_7.jpg" class="d-block photo-item" data-fancybox="gallery">
-                  <img src="images/img_7.jpg" alt="Image" class="img-fluid mb-0">
+                <a href="images/Family Justice 3.jpg" class="d-block photo-item" data-fancybox="gallery" data-caption="Family Justice Center | ZGF">
+                  <img src="images/Family Justice 3.jpg" alt="Image" class="img-fluid mb-0">
                 </a>
               </div>
-              <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-                <a href="images/img_8.jpg" class="d-block photo-item" data-fancybox="gallery">
-                  <img src="images/img_8.jpg" alt="Image" class="img-fluid mb-0">
-                </a>
-              </div>
+
+
               <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-                <a href="images/img_9.jpg" class="d-block photo-item" data-fancybox="gallery">
-                  <img src="images/img_9.jpg" alt="Image" class="img-fluid mb-0">
+                <a href="images/West Valley Hero.jpg" class="d-block photo-item" data-fancybox="gallery" data-caption="West Valley College Fox Technology Center | Steinberg Hart">
+                  <img src="images/West Valley Hero.jpg" alt="Image" class="img-fluid mb-0">
                 </a>
               </div>
-
-
               <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
-                <a href="images/img_10.jpg" class="d-block photo-item" data-fancybox="gallery">
-                  <img src="images/img_10.jpg" alt="Image" class="img-fluid mb-0">
+                <a href="images/West Valley Editorial.jpg" class="d-block photo-item" data-fancybox="gallery" data-caption="West Valley College Fox Technology Center | Steinberg Hart">
+                  <img src="images/West Valley Editorial.jpg" alt="Image" class="img-fluid mb-0">
                 </a>
               </div>
               <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-                <a href="images/img_1.jpg" class="d-block photo-item" data-fancybox="gallery">
-                  <img src="images/img_1.jpg" alt="Image" class="img-fluid mb-0">
-                </a>
-              </div>
-              <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-                <a href="images/img_2.jpg" class="d-block photo-item" data-fancybox="gallery">
-                  <img src="images/img_2.jpg" alt="Image" class="img-fluid mb-0">
+                <a href="images/West Valley Editorial 2.jpg" class="d-block photo-item" data-fancybox="gallery" data-caption="West Valley College Fox Technology Center | Steinberg Hart">
+                  <img src="images/West Valley Editorial 2.jpg" alt="Image" class="img-fluid mb-0">
                 </a>
               </div>
 
-              <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
-                <a href="images/img_3.jpg" class="d-block photo-item" data-fancybox="gallery">
-                  <img src="images/img_3.jpg" alt="Image" class="img-fluid mb-0">
-                </a>
-              </div>
-              <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-                <a href="images/img_4.jpg" class="d-block photo-item" data-fancybox="gallery">
-                  <img src="images/img_4.jpg" alt="Image" class="img-fluid mb-0">
-                </a>
-              </div>
-              <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-                <a href="images/img_5.jpg" class="d-block photo-item" data-fancybox="gallery">
-                  <img src="images/img_5.jpg" alt="Image" class="img-fluid mb-0">
-                </a>
-              </div>
-
-              <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
-                <a href="images/img_6.jpg" class="d-block photo-item" data-fancybox="gallery">
-                  <img src="images/img_6.jpg" alt="Image" class="img-fluid mb-0">
-                </a>
-              </div>
-              <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-                <a href="images/img_7.jpg" class="d-block photo-item" data-fancybox="gallery">
-                  <img src="images/img_7.jpg" alt="Image" class="img-fluid mb-0">
-                </a>
-              </div>
-              <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-                <a href="images/img_8.jpg" class="d-block photo-item" data-fancybox="gallery">
-                  <img src="images/img_8.jpg" alt="Image" class="img-fluid mb-0">
-                </a>
-              </div>
-
-              <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-                <a href="images/img_9.jpg" class="d-block photo-item" data-fancybox="gallery">
-                  <img src="images/img_9.jpg" alt="Image" class="img-fluid mb-0">
-                </a>
-              </div>
-              <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-                <a href="images/img_4.jpg" class="d-block photo-item" data-fancybox="gallery">
-                  <img src="images/img_4.jpg" alt="Image" class="img-fluid mb-0">
-                </a>
-              </div>
-              <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-                <a href="images/img_5.jpg" class="d-block photo-item" data-fancybox="gallery">
-                  <img src="images/img_5.jpg" alt="Image" class="img-fluid mb-0">
-                </a>
-              </div>
+              <!-- <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up"> -->
+              <!--   <a href="images/img_7.jpg" class="d-block photo-item" data-fancybox="gallery"> -->
+              <!--     <img src="images/img_7.jpg" alt="Image" class="img-fluid mb-0"> -->
+              <!--   </a> -->
+              <!-- </div> -->
+              <!-- <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100"> -->
+              <!--   <a href="images/img_8.jpg" class="d-block photo-item" data-fancybox="gallery"> -->
+              <!--     <img src="images/img_8.jpg" alt="Image" class="img-fluid mb-0"> -->
+              <!--   </a> -->
+              <!-- </div> -->
+              <!-- <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200"> -->
+              <!--   <a href="images/img_9.jpg" class="d-block photo-item" data-fancybox="gallery"> -->
+              <!--     <img src="images/img_9.jpg" alt="Image" class="img-fluid mb-0"> -->
+              <!--   </a> -->
+              <!-- </div> -->
+              <!---->
+              <!---->
+              <!-- <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up"> -->
+              <!--   <a href="images/img_10.jpg" class="d-block photo-item" data-fancybox="gallery"> -->
+              <!--     <img src="images/img_10.jpg" alt="Image" class="img-fluid mb-0"> -->
+              <!--   </a> -->
+              <!-- </div> -->
+              <!-- <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100"> -->
+              <!--   <a href="images/img_1.jpg" class="d-block photo-item" data-fancybox="gallery"> -->
+              <!--     <img src="images/img_1.jpg" alt="Image" class="img-fluid mb-0"> -->
+              <!--   </a> -->
+              <!-- </div> -->
+              <!-- <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200"> -->
+              <!--   <a href="images/img_2.jpg" class="d-block photo-item" data-fancybox="gallery"> -->
+              <!--     <img src="images/img_2.jpg" alt="Image" class="img-fluid mb-0"> -->
+              <!--   </a> -->
+              <!-- </div> -->
+              <!---->
+              <!-- <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up"> -->
+              <!--   <a href="images/img_3.jpg" class="d-block photo-item" data-fancybox="gallery"> -->
+              <!--     <img src="images/img_3.jpg" alt="Image" class="img-fluid mb-0"> -->
+              <!--   </a> -->
+              <!-- </div> -->
+              <!-- <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100"> -->
+              <!--   <a href="images/img_4.jpg" class="d-block photo-item" data-fancybox="gallery"> -->
+              <!--     <img src="images/img_4.jpg" alt="Image" class="img-fluid mb-0"> -->
+              <!--   </a> -->
+              <!-- </div> -->
+              <!-- <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200"> -->
+              <!--   <a href="images/img_5.jpg" class="d-block photo-item" data-fancybox="gallery"> -->
+              <!--     <img src="images/img_5.jpg" alt="Image" class="img-fluid mb-0"> -->
+              <!--   </a> -->
+              <!-- </div> -->
+              <!---->
+              <!-- <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up"> -->
+              <!--   <a href="images/img_6.jpg" class="d-block photo-item" data-fancybox="gallery"> -->
+              <!--     <img src="images/img_6.jpg" alt="Image" class="img-fluid mb-0"> -->
+              <!--   </a> -->
+              <!-- </div> -->
+              <!-- <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100"> -->
+              <!--   <a href="images/img_7.jpg" class="d-block photo-item" data-fancybox="gallery"> -->
+              <!--     <img src="images/img_7.jpg" alt="Image" class="img-fluid mb-0"> -->
+              <!--   </a> -->
+              <!-- </div> -->
+              <!-- <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200"> -->
+              <!--   <a href="images/img_8.jpg" class="d-block photo-item" data-fancybox="gallery"> -->
+              <!--     <img src="images/img_8.jpg" alt="Image" class="img-fluid mb-0"> -->
+              <!--   </a> -->
+              <!-- </div> -->
+              <!---->
+              <!-- <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100"> -->
+              <!--   <a href="images/img_9.jpg" class="d-block photo-item" data-fancybox="gallery"> -->
+              <!--     <img src="images/img_9.jpg" alt="Image" class="img-fluid mb-0"> -->
+              <!--   </a> -->
+              <!-- </div> -->
+              <!-- <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100"> -->
+              <!--   <a href="images/img_4.jpg" class="d-block photo-item" data-fancybox="gallery"> -->
+              <!--     <img src="images/img_4.jpg" alt="Image" class="img-fluid mb-0"> -->
+              <!--   </a> -->
+              <!-- </div> -->
+              <!-- <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200"> -->
+              <!--   <a href="images/img_5.jpg" class="d-block photo-item" data-fancybox="gallery"> -->
+              <!--     <img src="images/img_5.jpg" alt="Image" class="img-fluid mb-0"> -->
+              <!--   </a> -->
+              <!-- </div> -->
 
 
 
