--- a/index.html
+++ b/index.html
@@ -92,36 +92,41 @@
             <div class="grid ">
               <div class="grid-sizer"></div>
 
+              <div class="grid-item " >
+                <a href="images/West Valley Hero.jpg" class="" data-fancybox="gallery" data-caption="West Valley College Fox Technology Center | Steinberg Hart">
+                  <img src="images/West Valley Hero.jpg" alt="Image" class="mb-0">
+                </a>
+              </div>
+              <div class="grid-item " >
+                <a href="images/West Valley Editorial.jpg" class="" data-fancybox="gallery" data-caption="West Valley College Fox Technology Center | Steinberg Hart">
+                  <img src="images/West Valley Editorial.jpg" alt="Image" class="mb-0">
+                </a>
+              </div>
+              <div class="grid-item " >
+                <a href="images/West Valley Editorial 2.jpg" class="" data-fancybox="gallery" data-caption="West Valley College Fox Technology Center | Steinberg Hart">
+                  <img src="images/West Valley Editorial 2.jpg" alt="Image" class="mb-0">
+                </a>
+              </div>
+              <div class="grid-item " >
+                <a href="images/West Valley Spec Detail.jpg" class="" data-fancybox="gallery" data-caption="West Valley College Fox Technology Center | Steinberg Hart">
+                  <img src="images/West Valley Spec Detail.jpg" alt="Image" class="mb-0">
+                </a>
+              </div>
+
               <div class="grid-item" >
-                <a href="images/Family Justice 1.jpg" class="d-block photo-item" data-fancybox="gallery" data-caption="Family Justice Center | ZGF">
-                  <img src="images/Family Justice 1.jpg" alt="Image" class="img-fluid mb-0">
+                <a href="images/Family Justice 1.jpg" class="" data-fancybox="gallery" data-caption="Family Justice Center | ZGF">
+                  <img src="images/Family Justice 1.jpg" alt="Image" class="mb-0">
                 </a>
               </div>
               <div class="grid-item " >
-                <a href="images/Family Justice 2.jpg" class="d-block photo-item" data-fancybox="gallery" data-caption="Family Justice Center | ZGF">
-                  <img src="images/Family Justice 2.jpg" alt="Image" class="img-fluid mb-0">
-                </a>
-              </div>
-
-              <div class="grid-item " >
-                <a href="images/Family Justice 3.jpg" class="d-block photo-item" data-fancybox="gallery" data-caption="Family Justice Center | ZGF">
-                  <img src="images/Family Justice 3.jpg" alt="Image" class="img-fluid mb-0">
+                <a href="images/Family Justice 2.jpg" class="" data-fancybox="gallery" data-caption="Family Justice Center | ZGF">
+                  <img src="images/Family Justice 2.jpg" alt="Image" class="mb-0">
                 </a>
               </div>
 
               <div class="grid-item " >
-                <a href="images/West Valley Hero.jpg" class="d-block photo-item" data-fancybox="gallery" data-caption="West Valley College Fox Technology Center | Steinberg Hart">
-                  <img src="images/West Valley Hero.jpg" alt="Image" class="img-fluid mb-0">
-                </a>
-              </div>
-              <div class="grid-item " >
-                <a href="images/West Valley Editorial.jpg" class="d-block photo-item" data-fancybox="gallery" data-caption="West Valley College Fox Technology Center | Steinberg Hart">
-                  <img src="images/West Valley Editorial.jpg" alt="Image" class="img-fluid mb-0">
-                </a>
-              </div>
-              <div class="grid-item " >
-                <a href="images/West Valley Editorial 2.jpg" class="d-block photo-item" data-fancybox="gallery" data-caption="West Valley College Fox Technology Center | Steinberg Hart">
-                  <img src="images/West Valley Editorial 2.jpg" alt="Image" class="img-fluid mb-0">
+                <a href="images/Family Justice 3.jpg" class="" data-fancybox="gallery" data-caption="Family Justice Center | ZGF">
+                  <img src="images/Family Justice 3.jpg" alt="Image" class="mb-0">
                 </a>
               </div>
 
@@ -129,109 +134,110 @@
             </div>
           </section> <!-- #section-photos -->
 
-          <section class="site-section" id="section-about">
-            <div class="container" >
-              <div class="row justify-content-center">
+        </div>
+        <section class="site-section" id="section-about">
+          <div class="container" >
+            <div class="row justify-content-center">
 
-                <div class="col-md-8">
+              <div class="col-md-8">
 
-                  <h2 class="heading">About</h2>
+                <h2 class="heading">About</h2>
 
-                  <img src="images/img_1.jpg" alt="Image" class="img-fluid mb-4 w-50 rounded-circle">
+                <img src="images/img_1.jpg" alt="Image" class="img-fluid mb-4 w-50 rounded-circle">
 
-                  <div data-aos="fade-up"  data-aos-delay="100">
-                    <h2 class="">Hi I'm Jessica Cameron</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor aperiam a velit. Harum eligendi quod reiciendis quos ullam libero est dolor, <a href="#">corporis dolores assumenda</a>, delectus, quidem voluptatibus dolorum temporibus enim!</p>
-                    <p>Neque facilis soluta, accusantium quaerat, adipisci porro animi, hic fugiat id vero placeat dolorem accusamus sapiente odio consequatur debitis beatae eius quos alias. In recusandae magnam quis ipsum, asperiores mollitia!</p>
-                    <h3 class=" mt-5">Services</h3>
+                <div data-aos="fade-up"  data-aos-delay="100">
+                  <h2 class="">Hi I'm Jessica Cameron</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor aperiam a velit. Harum eligendi quod reiciendis quos ullam libero est dolor, <a href="#">corporis dolores assumenda</a>, delectus, quidem voluptatibus dolorum temporibus enim!</p>
+                  <p>Neque facilis soluta, accusantium quaerat, adipisci porro animi, hic fugiat id vero placeat dolorem accusamus sapiente odio consequatur debitis beatae eius quos alias. In recusandae magnam quis ipsum, asperiores mollitia!</p>
+                  <h3 class=" mt-5">Services</h3>
 
-                    <div class="d-block d-md-flex mt-5">
-                      <div class="mr-md-auto mr-2">
-                        <ul class="ul-check list-unstyled primary">
-                          <li>Optio eveniet ex laborum</li>
-                          <li>Inventore sapiente tenetur</li>
-                          <li>Ipsam aliquam esse</li>
-                        </ul>
-                      </div>
-                      <div class="mr-md-auto">
-                        <ul class="ul-check list-unstyled primary">
-                          <li>Optio eveniet ex laborum</li>
-                          <li>Inventore sapiente tenetur</li>
-                          <li>Ipsam aliquam esse</li>
-                        </ul>
-                      </div>
-
+                  <div class="d-block d-md-flex mt-5">
+                    <div class="mr-md-auto mr-2">
+                      <ul class="ul-check list-unstyled primary">
+                        <li>Optio eveniet ex laborum</li>
+                        <li>Inventore sapiente tenetur</li>
+                        <li>Ipsam aliquam esse</li>
+                      </ul>
                     </div>
+                    <div class="mr-md-auto">
+                      <ul class="ul-check list-unstyled primary">
+                        <li>Optio eveniet ex laborum</li>
+                        <li>Inventore sapiente tenetur</li>
+                        <li>Ipsam aliquam esse</li>
+                      </ul>
+                    </div>
+
                   </div>
                 </div>
               </div>
             </div>
-          </section>
+          </div>
+        </section>
 
-          <section class="site-section" id="section-contact">
-            <div class="container">
-              <div class="row justify-content-center">
-                <div class="col-md-8">
-                  <h2 class=" mb-5 heading">Contact</h2>
+        <section class="site-section" id="section-contact">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-md-8">
+                <h2 class=" mb-5 heading">Contact</h2>
 
-                  <form method="post" action="https://forms.un-static.com/forms/20ce849bd5db71a6709117082dbdbe50d0e1e6e3">
-                    <div class="row form-group">
-                      <div class="col-md-6 mb-3 mb-md-0">
-                        <label class="form-title" for="fname">First Name</label>
-                        <input name="firstname" type="text" id="fname" class="form-control">
-                      </div>
-                      <div class="col-md-6">
-                        <label class="form-title" for="lname">Last Name</label>
-                        <input name="lastname" type="text" id="lname" class="form-control">
-                      </div>
+                <form method="post" action="https://forms.un-static.com/forms/20ce849bd5db71a6709117082dbdbe50d0e1e6e3">
+                  <div class="row form-group">
+                    <div class="col-md-6 mb-3 mb-md-0">
+                      <label class="form-title" for="fname">First Name</label>
+                      <input name="firstname" type="text" id="fname" class="form-control">
                     </div>
-
-                    <div class="row form-group">
-
-                      <div class="col-md-12">
-                        <label class="form-title" for="email">Email</label> 
-                        <input name="email" type="email" id="email" class="form-control">
-                      </div>
+                    <div class="col-md-6">
+                      <label class="form-title" for="lname">Last Name</label>
+                      <input name="lastname" type="text" id="lname" class="form-control">
                     </div>
+                  </div>
 
-                    <div class="row form-group">
+                  <div class="row form-group">
 
-                      <div class="col-md-12">
-                        <label class="form-title" for="subject">Subject</label> 
-                        <input name="subject" type="subject" id="subject" class="form-control">
-                      </div>
+                    <div class="col-md-12">
+                      <label class="form-title" for="email">Email</label> 
+                      <input name="email" type="email" id="email" class="form-control">
                     </div>
+                  </div>
 
-                    <div class="row form-group mb-5">
-                      <div class="col-md-12">
-                        <label class="form-title" for="message">Message</label> 
-                        <textarea name="message" id="message" cols="30" rows="7" class="form-control"></textarea>
-                      </div>
-                    </div>
+                  <div class="row form-group">
 
-                    <div class="row form-group">
-                      <div class="col-md-12">
-                        <button type="submit" value="Send Message" class="btn btn-primary btn-md">Submit</button>
-                      </div>
+                    <div class="col-md-12">
+                      <label class="form-title" for="subject">Subject</label> 
+                      <input name="subject" type="subject" id="subject" class="form-control">
                     </div>
-                    <div>
-                      <p><small>(Powered by <a rel="nofollow" href="Un-static Forms">Un-static Forms</a>)</small></p>
-                    </div>
+                  </div>
 
-                  </form>
-                </div>
+                  <div class="row form-group mb-5">
+                    <div class="col-md-12">
+                      <label class="form-title" for="message">Message</label> 
+                      <textarea name="message" id="message" cols="30" rows="7" class="form-control"></textarea>
+                    </div>
+                  </div>
+
+                  <div class="row form-group">
+                    <div class="col-md-12">
+                      <button type="submit" value="Send Message" class="btn btn-primary btn-md">Submit</button>
+                    </div>
+                  </div>
+                  <div>
+                    <p><small>(Powered by <a rel="nofollow" href="Un-static Forms">Un-static Forms</a>)</small></p>
+                  </div>
+
+                </form>
               </div>
             </div>
-          </section>
+          </div>
+        </section>
 
-          <div class="row justify-content-center">
-            <div class="col-md-12 text-center py-5">
-              <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved.
-              </p>
-            </div>
+        <div class="row justify-content-center">
+          <div class="col-md-12 text-center py-5">
+            <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved.
+            </p>
           </div>
         </div>
-      </main>
+    </div>
+    </main>
 
     </div> <!-- .site-wrap -->
 
