Updated image + improved 3-column responsiveness

--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
             <div class="col-md-7 text-center">
               <!-- <h1 class=" heading text-uppercase text-white" data-aos="fade-up">Javier Thiele-Ruiz</h1> -->
               <a href="#section-photos" class="d-block " >
-                <img src="images/GettyImages-672094523.jpg" alt="Image" class="img-fluid mb-0">
+                <img src="images/West Valley Student Services.jpg" alt="Image" class="img-fluid mb-0">
             </div>
           </div>
         </section>
 
-        <div class="container-fluid site-section">
+        <div class=" site-section">
 
           <div class="row mb-3">
             <div class="col-12 text-center">
@@ -108,10 +108,15 @@
                 </a>
               </div>
               <div class="grid-item " >
-                <a href="images/West Valley Spec Detail.jpg" class="" data-fancybox="gallery" data-caption="West Valley College Fox Technology Center | Steinberg Hart">
-                  <img src="images/West Valley Spec Detail.jpg" alt="Image" class="mb-0">
+                <a href="images/West Valley Spec Detail 2.jpg" class="" data-fancybox="gallery" data-caption="West Valley College Fox Technology Center | Steinberg Hart">
+                  <img src="images/West Valley Spec Detail 2.jpg" alt="Image" class="mb-0">
                 </a>
               </div>
+              <!-- <div class="grid-item " > -->
+              <!--   <a href="images/West Valley Spec Detail.jpg" class="" data-fancybox="gallery" data-caption="West Valley College Fox Technology Center | Steinberg Hart"> -->
+              <!--     <img src="images/West Valley Spec Detail.jpg" alt="Image" class="mb-0"> -->
+              <!--   </a> -->
+              <!-- </div> -->
 
               <div class="grid-item" >
                 <a href="images/Family Justice 1.jpg" class="" data-fancybox="gallery" data-caption="Family Justice Center | ZGF">
@@ -136,7 +141,7 @@
 
         </div>
         <section class="site-section" id="section-about">
-          <div class="container" >
+          <div class="container-fluid">
             <div class="row justify-content-center">
 
               <div class="col-md-8">
@@ -175,7 +180,7 @@
         </section>
 
         <section class="site-section" id="section-contact">
-          <div class="container">
+          <div class="container-fluid">
             <div class="row justify-content-center">
               <div class="col-md-8">
                 <h2 class=" mb-5 heading">Contact</h2>
