--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="fonts/icomoon/style.css">
 
+    <!-- <link rel="stylesheet" href="css/NewsGothic.css"> -->
     <link rel="stylesheet" href="fonts/NewsGothicStd/NewsGothic.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
@@ -55,7 +56,7 @@
         <div class="main-menu">
           <ul class="js-clone-nav">
             <li><a href="#section-home" class="nav-link js-menu-close">Home</a></li>
-            <li><a href="#section-photos" class="nav-link js-menu-close">Photos</a></li>
+            <li><a href="#section-photos" class="nav-link js-menu-close">Portfolio</a></li>
             <li><a href="#section-about" class="nav-link js-menu-close">About</a></li>
             <!-- <li><a href="#section-testimonial" class="nav-link">Testimonial</a></li> -->
             <!-- <li><a href="#section-blog" class="nav-link">Blog</a></li> -->
@@ -73,7 +74,7 @@
 
         <section class="site-section-hero bg-image mb-5" style=""  id="section-home">
           <div class="row justify-content-center align-items-center">
-            <div class="col-md-7 text-center">
+            <div class="col-md-10 text-center">
               <!-- <h1 class=" heading text-uppercase text-white" data-aos="fade-up">Javier Thiele-Ruiz</h1> -->
               <a href="#section-photos" class="d-block " >
                 <img src="images/West Valley Student Services.jpg" alt="Image" class="img-fluid mb-0">
@@ -81,34 +82,34 @@
           </div>
         </section>
 
-        <div class=" site-section">
+        <div class="m-3 site-section mx-auto">
 
           <div class="row mb-3">
             <div class="col-12 text-center">
-              <h2 class="heading">Photos</h2>
+              <h2 class="heading">Portfolio</h2>
             </div>
           </div>
 
           <section class="photos" id="section-photos">
-            <div class="grid ">
+            <div class="grid">
               <div class="grid-sizer"></div>
 
-              <div class="grid-item " >
+              <div data-aos="fade-up"  data-aos-delay="100" class="grid-item " >
                 <a href="images/West Valley Hero.jpg" class="" data-fancybox="gallery" data-caption="West Valley College Fox Technology Center | Steinberg Hart">
                   <img src="images/West Valley Hero.jpg" alt="Image" class="mb-0">
                 </a>
               </div>
-              <div class="grid-item " >
+              <div data-aos="fade-up"  data-aos-delay="100" class="grid-item " >
                 <a href="images/West Valley Editorial.jpg" class="" data-fancybox="gallery" data-caption="West Valley College Fox Technology Center | Steinberg Hart">
                   <img src="images/West Valley Editorial.jpg" alt="Image" class="mb-0">
                 </a>
               </div>
-              <div class="grid-item " >
+              <div data-aos="fade-up"  data-aos-delay="100" class="grid-item " >
                 <a href="images/West Valley Editorial 2.jpg" class="" data-fancybox="gallery" data-caption="West Valley College Fox Technology Center | Steinberg Hart">
                   <img src="images/West Valley Editorial 2.jpg" alt="Image" class="mb-0">
                 </a>
               </div>
-              <div class="grid-item " >
+              <div data-aos="fade-up"  data-aos-delay="100" class="grid-item " >
                 <a href="images/West Valley Spec Detail 2.jpg" class="" data-fancybox="gallery" data-caption="West Valley College Fox Technology Center | Steinberg Hart">
                   <img src="images/West Valley Spec Detail 2.jpg" alt="Image" class="mb-0">
                 </a>
@@ -119,18 +120,18 @@
               <!--   </a> -->
               <!-- </div> -->
 
-              <div class="grid-item" >
+              <div data-aos="fade-up"  data-aos-delay="100" class="grid-item" >
                 <a href="images/Family Justice 1.jpg" class="" data-fancybox="gallery" data-caption="Family Justice Center | ZGF">
                   <img src="images/Family Justice 1.jpg" alt="Image" class="mb-0">
                 </a>
               </div>
-              <div class="grid-item " >
+              <div data-aos="fade-up"  data-aos-delay="100" class="grid-item " >
                 <a href="images/Family Justice 2.jpg" class="" data-fancybox="gallery" data-caption="Family Justice Center | ZGF">
                   <img src="images/Family Justice 2.jpg" alt="Image" class="mb-0">
                 </a>
               </div>
 
-              <div class="grid-item " >
+              <div data-aos="fade-up"  data-aos-delay="100" class="grid-item " >
                 <a href="images/Family Justice 3.jpg" class="" data-fancybox="gallery" data-caption="Family Justice Center | ZGF">
                   <img src="images/Family Justice 3.jpg" alt="Image" class="mb-0">
                 </a>
@@ -141,7 +142,7 @@
           </section> <!-- #section-photos -->
 
         </div>
-        <section class="site-section" id="section-about">
+        <section class="site-section mx-auto" id="section-about">
           <div class="container-fluid">
             <div class="row justify-content-center">
 
@@ -180,7 +181,7 @@
           </div>
         </section>
 
-        <section class="site-section" id="section-contact">
+        <section class="site-section mx-auto" id="section-contact">
           <div class="container-fluid">
             <div class="row justify-content-center">
               <div class="col-md-8">
